added symbol table not done though

--- a/main.html
+++ b/main.html
@@ -44,7 +44,8 @@ op            ::== + | -
     <!-- Client-side code down here, per the YSlow advice. 
     // (http://developer.yahoo.com/performance/rules.html#js_bottom) -->
     <script type="text/javascript" src="scripts/utils.js"></script>	
-    <script type="text/javascript" src="scripts/lexer.js"></script>	
+    <script type="text/javascript" src="scripts/lexer.js"></script>
+    <script type="text/javascript" src="scripts/parser.js"></script>
     <script type="text/javascript">
     // Global variables
     var tokens = "";
@@ -52,6 +53,8 @@ op            ::== + | -
     var currentToken = new Token();
     var errorCount = 0;
     var EOF = "$";
+    
+    var symbolTable = new Array();
 
     function init()
     {
