basics work now to corner cases

--- a/main.html
+++ b/main.html
@@ -51,6 +51,7 @@ op            ::== + | -
     var tokens = new Array();
     var tokenIndex = 0;
     var currentToken = new Token();
+    var warningCount = 0;
     var errorCount = 0;
     var EOF = "$";
     
