--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@ op            ::== + | -
     <span id="headers">
     </span>
     <span id="frontend">
-        <textarea class="textbox" id="taSourceCode" cols="32" rows="18">{int a a=1+2 {string b b="a skdmn"}{int d} print(a)} $</textarea>
+        <textarea class="textbox" id="taSourceCode" cols="32" rows="18">{int a a=1+2 {string b b="a skdmn"}{int d} print(1+a)} $</textarea>
         <textarea class="textbox" readonly id="taOutput" cols="32" rows="18"></textarea>
         <textarea class="textbox" readonly id="symbolTable" cols="32" rows="18"></textarea>
         <textarea class="textbox" readonly id="abstractSyntaxTree" cols="32" rows="18"></textarea>
